--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-i18n": "^10.0.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
@@ -27,6 +28,7 @@
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.4.2",
+    "sass-embedded": "^1.83.4",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
