--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "js-cookie": "^3.0.5",
     "vue": "^3.5.13",
-    "vue-i18n": "^10.0.5"
+    "vue-i18n": "^10.0.5",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
